--- a/style.css
+++ b/style.css
@@ -12,71 +12,16 @@ body,
   padding: 0;
 }
 
-body {
-  /* font-family: sans-serif; */
-  font-family: 'Nova Square', cursive;
-  /* font-family: "'Electrolize', sans-serif"; */
-  background-color: #f9fbfd;
-  
+body {  
+  font-family: 'Nova Square', cursive;  
+  background-color: #f9fbfd;  
 }
-
-footer{
-  font-size: 15px;
-  text-align: center;
-  width:100%;
-  /* margin-bottom: 10px;
-  margin-top: 10px; */
-  height:40px;
-  position: fixed;
-  bottom: 0px;  
-  background-color:#f9fbfd;  
-  /* background: linear-gradient(to right,#f9fbfd,#f9fbfd); */
-  /* padding: 10px;   */
-  color:#1f71c9;
-  transition-property: background-color,box-shadow;
-  transition-duration: 500ms;
-  transition-timing-function: ease-in-out;
-  /* transition: background-color,box-shadow 2000ms ease-out; */
-  /* background: linear-gradient(to right,#343a40,#4ba2fe,tomato); */
-}
-
-footer:hover{
-  box-shadow: 0 0 15px tomato;
-  /* animation-name: flickerAnimation; */
-  background-color: rgb(235, 229, 229);
-}
-
-.navbar{
-  background: linear-gradient(to right,#343a40,#4ba2fe,hsl(360, 91%, 36%));
-  box-shadow: 0 0 25px #4ba2fe;
-}
-
-#brand-logo{
-  color:white;
-  transition: color 2000ms ease-out;
-}
-#brand-logo:hover{
-  color: tomato; 
-  
-}
-.btn:hover{
-  /* color:tomato; */
-  /* background-color:hsl(360, 91%, 36%); */
-  background-color:hsl(360, 91%, 36%);
-  color:white;
-
-}
-
-
 
 .wrapper {
   padding-top: 30px;
   padding-left: 20px;
-  padding-right: 20px;
-  width:95%; /*i added this*/
-  /* height: 100%; */
-  margin:auto;
-  margin-top:5%;
+  padding-right: 20px;  
+  margin-top:50px;
 }
 
 header {
@@ -112,16 +57,8 @@ header {
 
 .card-footer {
   text-align: center;
-  background-color:transparent; /*i added this */
+  background-color:transparent; /*Added by Abhijeet */
 }
-
-/* .card-footer::before {
-  content: " ";
-  display: block;
-  width: 100%;
-  background: #e7e9eb;
-  height: 2px;
-} */
 
 .card-footer::after {
   content: " ";
@@ -130,8 +67,7 @@ header {
 }
 
 .btn {
-  border: none;
-  /* background-color: hsl(360, 91%, 36%); */
+  border: none;  
   background-color:#384a5e;
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
@@ -170,12 +106,50 @@ button[disabled] {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  border: 2px dashed #384a5e;/* #c0c7cf;*/
+  border: 2px dashed #384a5e;
   border-radius: 6px;
   resize: none;
   overflow: hidden;
 }
 
+
+footer{
+  font-size: 15px;
+  text-align: center;
+  width:100%;
+  height:40px;
+  position: fixed;
+  bottom: 0px;  
+  background-color:#f9fbfd;  
+  color:#1f71c9;
+  transition-property: background-color,box-shadow;
+  transition-duration: 500ms;
+  transition-timing-function: ease-in-out;
+}
+
+footer:hover{
+  box-shadow: 0 0 15px tomato;  
+  background-color: rgb(235, 229, 229);
+}
+
+.navbar{
+  background: linear-gradient(to right,#343a40,#4ba2fe,hsl(360, 91%, 36%));
+  box-shadow: 0 0 25px #4ba2fe;
+}
+
+#brand-logo{
+  color:white;
+  transition: color 2000ms ease-out;
+}
+#brand-logo:hover{
+  color: tomato; 
+  
+}
+.btn:hover{  
+  background-color:hsl(360, 91%, 36%);
+  color:white;
+
+}
 
 @media (max-width: 690px) {
   .btn {
